--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -2,12 +2,12 @@
 # To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version: 0.1
 cli:
-  version: 1.18.1
+  version: 1.19.0
 # Trunk provides extensibility via plugins. (https://docs.trunk.io/plugins)
 plugins:
   sources:
     - id: trunk
-      ref: v1.4.1
+      ref: v1.4.2
       uri: https://github.com/trunk-io/plugins
 # Many linters and tools depend on runtimes - configure them here. (https://docs.trunk.io/runtimes)
 runtimes:
@@ -18,20 +18,21 @@ runtimes:
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
   # disabled:
-    #- checkov
+  #- checkov
   enabled:
+    - checkov@3.2.79
     - dotenv-linter@3.3.0
     - git-diff-check
     - hadolint@2.12.0
-    - markdownlint@0.38.0
-    - prettier@3.1.1
-    - shellcheck@0.9.0
+    - markdownlint@0.40.0
+    - prettier@3.2.5
+    - shellcheck@0.10.0
     - shfmt@3.6.0
-    - terrascan@1.18.11
-    - tflint@0.50.0
-    - trivy@0.48.1
-    - trufflehog@3.63.7
-    - yamllint@1.33.0
+    - terrascan@1.19.1
+    - tflint@0.51.0
+    - trivy@0.51.1
+    - trufflehog@3.75.0
+    - yamllint@1.35.1
 actions:
   disabled:
     - trunk-announce
